# AI-Agents-HW3

./: .env-example  .gitignore  README.md  biblio.bib  pyproject.toml
config/: rate_limits.json  setup.json
docs/: PLAN.md  PRD.md  PRD_api_gatekeeper.md  PRD_crew_orchestration.md  PRD_lualatex_bidi_compiler.md  PRD_markdown_parser.md  PROMPT_BOOK.md  TODO.md
notebooks/: analysis.ipynb
skills/: SKILL.md
src/: main.py
src/sdk/: bibliography.py  chapter_planner.py  chapter_writer.py  document_editor.py  pipeline_helpers.py  prompts.py  sanitizer.py  sdk.py  validators.py
src/services/: agents.py  latex_builder.py  sensitivity_analysis.py  tasks.py  tools.py
src/shared/: config.py  gatekeeper.py  version.py
tests/integration/: test_sdk.py
tests/unit/: test_agents_tasks.py  test_bibliography.py  test_chapter_planner.py  test_config.py  test_document_editor.py  test_gatekeeper.py  test_main.py  test_prompts.py  test_sdk.py  test_tasks.py  test_tools.py  test_validators.py
