[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "your-project-name"
version = "0.1.0"
description = "A project managed with uv"
requires-python = ">=3.10"
dependencies = []

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["ALL"]
ignore = ["E501"]

[tool.pytest.ini_options]
addopts = "--cov=. --cov-fail-under=85"
testpaths = ["tests"]

[tool.hatch.build.targets.wheel]
packages = ["src"]