[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "your-project-name"
version = "0.1.0"
description = "A project managed with uv"
requires-python = ">=3.10"
dependencies = [
    "crewai[google-genai]>=1.14.6",
    "ddgs>=9.14.4",
    "jinja2>=3.1.6",
    "langchain-community>=0.4.2",
    "matplotlib>=3.10.9",
    "pytest>=9.0.3",
    "pytest-cov>=7.1.0",
    "pytest-mock>=3.15.1",
    "ruff>=0.15.16",
]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["ALL"]
ignore = ["E501"]

[tool.pytest.ini_options]
addopts = "--cov=. --cov-fail-under=85"
testpaths = ["tests"]

filterwarnings = [
    "ignore::DeprecationWarning"
]

[tool.hatch.build.targets.wheel]
packages = ["src"]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "pytest-cov>=7.1.0",
]

[tool.ruff.lint.per-file-ignores]
# Allow print statements in the CLI entry point
"src/main.py" = ["T201", "D", "ANN"]
"src/constants.py" = ["D"]
"src/services/latex_builder.py" = ["D", "W"]
"src/services/agents.py" = ["D", "ANN"]
"src/sdk/sdk.py" = ["D", "ANN"]
# Standard test ignores: Asserts (S101), Docstrings (D), Annotations (ANN)
"tests/*" = ["S101", "D", "ANN", "PLR", "TRY", "EM", "PTH"]